--- a/application/admin/view/index/login.html
+++ b/application/admin/view/index/login.html
@@ -85,12 +85,12 @@
                                     </span>
                                 </div>
                                 {/if}
-                                <div class="form-group">
+                                <!-- <div class="form-group">
                                     <label class="inline" for="keeplogin">
                                         <input type="checkbox" name="keeplogin" id="keeplogin" value="1" />
                                         {:__('Keep login')}
                                     </label>
-                                </div>
+                                </div> -->
                                 <div class="form-group">
                                     <button type="submit" class="btn btn-success btn-lg btn-block">{:__('Sign in')}</button>
                                 </div>
