--- a/application/index/view/common/header.html
+++ b/application/index/view/common/header.html
@@ -36,7 +36,7 @@
         <div class="header_login">
             <img src="/statics/images/icons/login_name.png">
             {if condition="$isLogin == true"}
-            <a href="{:url('index/user/index')}">个人中心</a> / <a href="{:url('index/user/logout')}">注销</a>
+            <a href="{:url('index/user/index')}">会员</a> / <a href="{:url('index/user/logout')}">注销</a>
             {else/}
             <a href="{:url('index/user/login')}">登录</a> / <a href="{:url('index/user/register')}">注册</a>
             {/if}
