--- a/application/index/view/user/forgetpwd.html
+++ b/application/index/view/user/forgetpwd.html
@@ -33,16 +33,16 @@
 						<span>验证码</span>
 						<div class="in-item-cap">
 							<input type="text" name="code" id="code" placeholder="请输入验证码" class="in-item-cap-inp">
-							<span>获取验证码</span>
+							<span class="sendCode">获取验证码</span>
 						</div>
 					</div>
 					<div class="in-item">
 						<span>密码</span>
-						<input type="text" name="password" id="password" placeholder="请输入密码">
+						<input type="password" name="password" id="password" placeholder="请输入密码">
 					</div>
 					<div class="in-item">
 						<span>新密码</span>
-						<input type="text" name="newpassword" id="newpassword" placeholder="请输入新密码">
+						<input type="password" name="newpassword" id="newpassword" placeholder="请输入新密码">
 					</div>
 					<button type="button" onclick="check_submit()">确定</button>
 				</form>
@@ -52,6 +52,7 @@
 	<!-- 底部 -->
 	{include file="common/footer"}
 <script type="text/javascript" src="/statics/layer/layer.js"></script>
+<script type="text/javascript" src="/statics/js/jquery.cookie.js"></script>
 <script type="text/javascript">
 	function check_submit(){
         var mobile = $.trim($('#mobile').val());
@@ -118,27 +119,73 @@
         layer.msg(msg, {icon: 2});
     }
 
-    $('#count_down').removeAttr("disabled");
-    //倒计时函数
-    function jsInnerTimeout(id,intAs)
-    {
-        var codeObj=$("#"+id);
-        //var intAs = parseInt(codeObj.attr("IntervalTime"));
 
-        intAs--;
-        if(intAs<=-1)
-        {
-            codeObj.removeAttr("disabled");
-        // codeObj.attr("IntervalTime",60);
-            codeObj.text("发送");
-            return true;
+    // 发送验证码
+    // 发送手机验证码
+    $('.sendCode').click(function(){
+        if($(this).hasClass('disabled')) return false;
+
+        var form = $(this).parents('form');
+        // 手机号码验证
+        var mobile = form.find('#mobile').val();
+        if(!checkMobile(mobile)){
+            tips('手机号格式错误', '#mobile');
+            return false;
         }
 
-        codeObj.text(intAs+'秒');
-        //  codeObj.attr("IntervalTime",intAs);
+        layer.load('1');
 
-        setTimeout("jsInnerTimeout('"+id+"',"+intAs+")",1000);
-    };
+        $.ajax({
+            url: "{:url('api/sms/send')}",
+            type:'post',
+            dataType:'json',
+            data: {mobile: mobile, event: 'resetpwd'},
+            success: function(data){
+                layer.closeAll('loading');
+                if(data.code == 0){
+                    layer.msg(data.msg)
+                    $.cookie('second', 0);
+                    return false;
+                }
+                if(data.code == 1){
+                    // 可以发送验证码
+                    $.cookie('second', 60);
+                    settime($('.sendCode'));
+                    
+                    layer.msg('验证码发送成功');
+                }
+            },
+            error: function(){
+                layer.closeAll('loading');
+                layer.msg('服务器错误');
+            }
+        })
+    })
+    
+    // 刷新页面计算验证码发送时间
+    settime($('.sendCode'));
+
+    function tips(message, id){
+        layer.tips(message, id, {tips:[1, '#000']})
+    }
+
+
+    //开始倒计时
+    var countnum;
+    function settime(obj) { 
+        countnum=$.cookie("second");
+        if (countnum == 0) { 
+            obj.removeClass('disabled');
+            obj.html("获取验证码"); 
+            return;
+        } else if(countnum>0){ 
+            obj.addClass('disabled');
+            obj.html("重新发送(" + countnum + ")"); 
+            countnum--;
+            $.cookie("second", countnum);
+        } 
+        setTimeout(function() { settime(obj) }, 1000) //每1000毫秒执行一次
+    }
 </script>
 </body>
 </html>
