--- a/application/index/view/user/register.html
+++ b/application/index/view/user/register.html
@@ -34,16 +34,16 @@
                         <span>验证码</span>
                         <div class="in-item-cap">
                             <input type="text" name="code" id="code" placeholder="请输入验证码" class="in-item-cap-inp">
-                            <span>获取验证码</span>
+                            <span class="sendCode">获取验证码</span>
                         </div>
                     </div>
                     <div class="in-item">
                         <span>密码</span>
-                        <input type="text" name="password" id="password" placeholder="请输入密码">
+                        <input type="password" name="password" id="password" placeholder="请输入密码">
                     </div>
                     <div class="in-item">
                         <span>确认密码</span>
-                        <input type="text" name="password_confirm" id="password_confirm" placeholder="再次输入密码">
+                        <input type="password" name="password_confirm" id="password_confirm" placeholder="再次输入密码">
                     </div>
                     <div class="rule"><span><img src="/statics/images/icons/dui.png"></span>阅读并同意相关规定</div>
                     <button type="button" onclick="check_submit()">注册</button>
@@ -56,8 +56,10 @@
     {include file="common/footer"}
 
 <script type="text/javascript" src="/statics/layer/layer.js"></script>
+<script type="text/javascript" src="/statics//js/jquery.cookie.js"></script>
 <script type="text/javascript">
     function check_submit(){
+        var mobile = $.trim($('#mobile').val());
         var mobile = $.trim($('#mobile').val());
         var password = $.trim($('#password').val());
         var password_confirm = $.trim($('#password_confirm').val());
@@ -65,6 +67,11 @@
 
         if(mobile == ''){
             showErrorMsg('手机号不能为空!');
+            return false;
+        } 
+
+        if(code == ''){
+            showErrorMsg('验证码不能为空!');
             return false;
         }
         if(!checkMobile(mobile)){
@@ -77,10 +84,6 @@
         }
         if(password_confirm != password){
             showErrorMsg('两次密码不一致');
-            return false;
-        }
-        if(code == ''){
-            showErrorMsg('验证码不能为空!');
             return false;
         }
 
@@ -104,63 +107,77 @@
 
     }
 
-    // 发送手机短信
-    function send_sms_reg_code(){
-        var mobile = $('input[name="username"]').val();
-        var verify_code = $('input[name="verify_code"]').val();
+    // 发送验证码
+    // 发送手机验证码
+    $('.sendCode').click(function(){
+        if($(this).hasClass('disabled')) return false;
+
+        var form = $(this).parents('form');
+        // 手机号码验证
+        var mobile = form.find('#mobile').val();
         if(!checkMobile(mobile)){
-            layer.alert('请输入正确的手机号码', {icon: 2});//alert('请输入正确的手机号码');
-            return;
+            tips('手机号格式错误', '#mobile');
+            return false;
         }
-        if(verify_code == ''){
-            layer.alert('请输入图像验证码', {icon: 2});//alert('请输入正确的手机号码');
-            return;
-        }
-        var url = "/index.php?m=Home&c=Api&a=send_validate_code&scene=1&type=mobile&mobile="+mobile+"&verify_code="+verify_code;
+
+        layer.load('1');
+
         $.ajax({
-            url:url,
-            dataType: "json",
-            success: function(res){
-                if(res.status == 1)
-                {
-                    $('#count_down').attr("disabled","disabled");
-                    intAs = {$tpshop_config['sms_sms_time_out']|default=60}; // 手机短信超时时间
-                    jsInnerTimeout('count_down',intAs);
-                    layer.alert(res.msg, {icon: 1});
-                }else{
-                    layer.alert(res.msg, {icon: 2});
-                    verify('reflsh_code2')
+            url: "{:url('api/sms/send')}",
+            type:'post',
+            dataType:'json',
+            data: {mobile: mobile, event: 'register'},
+            success: function(data){
+                layer.closeAll('loading');
+                if(data.code == 0){
+                    layer.msg(data.msg)
+                    $.cookie('second', 0);
+                    return false;
                 }
+                if(data.code == 1){
+                    // 可以发送验证码
+                    $.cookie('second', 60);
+                    settime($('.sendCode'));
+                    
+                    layer.msg('验证码发送成功');
+                }
+            },
+            error: function(){
+                layer.closeAll('loading');
+                layer.msg('服务器错误');
             }
-        });
+        })
+    })
+    
+    // 刷新页面计算验证码发送时间
+    settime($('.sendCode'));
+
+    function tips(message, id){
+        layer.tips(message, id, {tips:[1, '#000']})
+    }
+
+
+    //开始倒计时
+    var countnum;
+    function settime(obj) { 
+        countnum=$.cookie("second");
+        if (countnum == 0) { 
+            obj.removeClass('disabled');
+            obj.html("获取验证码"); 
+            return;
+        } else if(countnum>0){ 
+            obj.addClass('disabled');
+            obj.html("重新发送(" + countnum + ")"); 
+            countnum--;
+            $.cookie("second", countnum);
+        } 
+        setTimeout(function() { settime(obj) }, 1000) //每1000毫秒执行一次
     }
 
     function showErrorMsg(msg){
         layer.msg(msg, {icon: 2});
     }
 
-    $('#count_down').removeAttr("disabled");
-    //倒计时函数
-    function jsInnerTimeout(id,intAs)
-    {
-        var codeObj=$("#"+id);
-        //var intAs = parseInt(codeObj.attr("IntervalTime"));
-
-        intAs--;
-        if(intAs<=-1)
-        {
-            codeObj.removeAttr("disabled");
-        // codeObj.attr("IntervalTime",60);
-            codeObj.text("发送");
-            return true;
-        }
-
-        codeObj.text(intAs+'秒');
-        //  codeObj.attr("IntervalTime",intAs);
-
-        setTimeout("jsInnerTimeout('"+id+"',"+intAs+")",1000);
-    };
-    
     
     function checkMobile(tel) {
         // var reg = /(^1[3|4|5|7|8][0-9]{9}$)/;
@@ -173,5 +190,7 @@
     }
     
 </script>
+
+
 </body>
 </html>
