--- a/public/statics/css/forget.css
+++ b/public/statics/css/forget.css
@@ -156,7 +156,7 @@
 	display: inline-block;
 }
 .in-item-cap .in-item-cap-inp{
-	width: 200px;
+	width: 180px;
 	border: none;
 	outline: none;  
 	height: 42px;
@@ -164,14 +164,18 @@
 
 }
 .in-item-cap span{
-	text-indent: 15px;
+	text-align: center;
 	line-height: 30px;
-	width: 90px;
+	width: 110px;
 	font-size:12px;
 	font-family:MicrosoftYaHei;
 	font-weight:400;
 	color:rgba(77,77,77,1);
 	border-left: 1px solid rgba(230,230,230,1);
+}
+
+.sendCode {
+	cursor: pointer;
 }
 /*forget*/
 
