--- a/application/index/view/common/header.html
+++ b/application/index/view/common/header.html
@@ -19,7 +19,7 @@
                     <li><a href="{:url('index/study/video')}">培训视频</a></li>
                     <li><a href="{:url('index/study/ziliao')}">学习资料</a></li>
                     <li><a href="{:url('index/study/progress')}">研究进展</a></li>
-                    <li><a href="{:url('index/study/industryKnowledge')}">行业知识</a></li>
+                    <li><a href="{:url('index/study/industryKnowledge')}">行业资讯</a></li>
                 </ul>
             </li>
             <li {if condition="CONTROLLER_NAME eq 'Resource'"}class="header_ul_act"{/if}>
