--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -80,10 +80,10 @@
             </div>
 
 
-            <!-- 行业知识 -->
+            <!-- 行业资讯 -->
             <!-- 标题 -->
             <div class="index_title index_flex">
-                <div class="index_title_l">行业知识</div>
+                <div class="index_title_l">行业资讯</div>
                 <a href="{:url('index/study/industryknowledge')}" class="index_title_r">更多 <img class="index_img" src="/statics/images/icons/you.png"></a>
             </div>
             <!-- 内容 -->
