--- a/application/index/view/study/all_left.html
+++ b/application/index/view/study/all_left.html
@@ -2,5 +2,5 @@
 	<li class=""><a href="javascript:;">培训视频</a></li>
 	<li class=""><a href="javascript:;">学习资料</a></li>
 	<li {if condition="ACTION_NAME eq 'progressall'"}class="more_l_act"{/if}><a href="{:url('index/study/progressAll')}">研究进展</a></li>
-	<li {if condition="ACTION_NAME eq 'knowledgeall'"}class="more_l_act"{/if}><a href="{:url('index/study/knowledgeAll')}">行业知识</a></li>
+	<li {if condition="ACTION_NAME eq 'knowledgeall'"}class="more_l_act"{/if}><a href="{:url('index/study/knowledgeAll')}">行业资讯</a></li>
 </ul>
