--- a/application/index/view/study/industry_knowledge.html
+++ b/application/index/view/study/industry_knowledge.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>行业知识</title>
+	<title>行业资讯</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<link rel="stylesheet" href="http://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
@@ -47,7 +47,7 @@
 	</div> 
 	<!-- 中间主要内容 -->
 	<div class="main">
-		<h3 class="more_title">行业知识</h3>
+		<h3 class="more_title">行业资讯</h3>
 		{foreach name="result" item="item"}
 		<div class="project">
 			<!-- 标题 -->
