--- a/application/index/view/study/knowledge_detail.html
+++ b/application/index/view/study/knowledge_detail.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>行业知识</title>
+	<title>行业资讯</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<link rel="stylesheet" href="http://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
@@ -18,7 +18,7 @@
 	<!-- 面包屑导航 -->
 	<ul class="bread breadcrumb">
 	    <li><a href="#">学习中心</a></li>
-	    <li><a href="{:url('index/study/knowledgeDetail')}">行业知识</a></li>
+	    <li><a href="{:url('index/study/knowledgeDetail')}">行业资讯</a></li>
 	    <li class="active"><a href="#">详情</a></li>
 	</ul>
 	<!-- 中间主要内容 -->
