--- a/application/index/view/study/knowledge_all.html
+++ b/application/index/view/study/knowledge_all.html
@@ -18,11 +18,11 @@
 	<!-- 面包屑导航 -->
 	<ul class="bread breadcrumb">
 	    <li><a href="{:url('index/project/index')}">学习中心</a></li>
-	    <li class="active"><a href="#">行业知识</a></li>
+	    <li class="active"><a href="#">行业资讯</a></li>
 	</ul>
 	<!-- 中间主要内容 -->
 	<div class="main">
-		<h3 class="more_title">行业知识</h3>
+		<h3 class="more_title">行业资讯</h3>
 		<div class="more">
 			{include file="study/all_left"}
 			<div class="more_r">
