--- a/application/index/view/common/header.html
+++ b/application/index/view/common/header.html
@@ -1,5 +1,5 @@
     <header>
-        <div class="header_logo">LOGO</div>
+        <div class="header_logo"><img src="/statics/images/logo.png" alt=""></div>
         <ul class="header_ul">
             <li {if condition="CONTROLLER_NAME eq 'Index'"}class="header_ul_act"{/if}><a href="/">首页</a></li>
             <li {if condition="CONTROLLER_NAME eq 'About'"}class="header_ul_act"{/if}><a href="{:url('index/about/index')}">关于我们</a></li>
