--- a/public/statics/css/common.css
+++ b/public/statics/css/common.css
@@ -7,7 +7,7 @@ body{
 header{
 	width:100%;
 	height:70px;
-	padding: 0 23%;
+	padding: 0 17%;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
@@ -17,7 +17,7 @@ header{
 
 /*左侧logo*/
 .header_logo{
-	margin-right: 10%;
+	margin-right: 20px;
 	font-size:16px;
 }
 
