--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -130,7 +130,7 @@
             <!-- 内容 -->
             <div class="index_partner_content">
                 {foreach name="parterList" item="item"}
-                <img src="{$item.image}" alt="{$item.title}" width="150" height="60">
+                <img src="{$item.image}" alt="{$item.title}" width="150">
                 {/foreach}
             </div>
         </div>
