--- a/application/admin/view/common/meta.html
+++ b/application/admin/view/common/meta.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 <meta name="renderer" content="webkit">
 
-<link rel="shortcut icon" href="__CDN__/assets/img/favicon.ico" />
+<link rel="shortcut icon" href="" />
 <!-- Loading Bootstrap -->
 <link href="__CDN__/assets/css/backend{$Think.config.app_debug?'':'.min'}.css?v={$Think.config.site.version}" rel="stylesheet">
 
