--- a/application/index/view/resource/job.html
+++ b/application/index/view/resource/job.html
@@ -23,7 +23,7 @@
 	</ul>
 	<!-- 中间主要内容 -->
 	<div class="work main">
-		<div class="detail_img ac"><img src="/statics/images/img/img_1020_400.png"></div>
+		<!-- <div class="detail_img ac"><img src="/statics/images/img/img_1020_400.png"></div> -->
 		<h3 class="more_title">工作机会</h3>
 		<ul class="work_ul">
 			{foreach name="list" item="item"}
