--- a/application/index/view/study/progress.html
+++ b/application/index/view/study/progress.html
@@ -24,7 +24,7 @@
 	</ul>
 	<!-- 中间主要内容 -->
 	<div class="main">
-		<div class="detail_img ac"><img src="/statics/images/img/img_1020_400.png"></div>
+		<!-- <div class="detail_img ac"><img src="/statics/images/img/img_1020_400.png"></div> -->
 		<div class="study_pro_flex">
 			<div class="study_pro_l">研究进展</div>
 			<a href="{:url('index/study/progressAll')}" class="study_pro_r">更多 <img class="index_img" src="/statics/images/icons/you.png"></a>
