--- a/application/index/view/study/ziliao.html
+++ b/application/index/view/study/ziliao.html
@@ -23,7 +23,7 @@
 	</ul>
 	<!-- 中间主要内容 -->
 	<div class="main">
-		<div class="study_img ac"><img src="/statics/images/img/img_1020_400.png"></div>
+		<!-- <div class="study_img ac"><img src="/statics/images/img/img_1020_400.png"></div> -->
 		<div class="study_title">
 			<div>
 				<span class="study_name">项目</span>
