--- a/application/index/view/resource/exhibition.html
+++ b/application/index/view/resource/exhibition.html
@@ -16,32 +16,12 @@
 <body>
 	<!-- 顶部菜单 -->
 	{include file="common/header"}
-	<!-- 轮播图 -->
-	<div id="myCarousel" class="carousel slide">
-        <!-- 轮播（Carousel）指标 -->
-        <ol class="carousel-indicators">
-            {foreach name="adList" item="item" key="k"}
-            <li data-target="#myCarousel" data-slide-to="{$k}" {$k==0 ? ' class="active"' : ''}></li>
-            {/foreach}
-        </ol>   
-        <!-- 轮播（Carousel）项目 -->
-        <div class="carousel-inner">
-            {foreach name="adList" item="item" key="k"}
-            <div class="item {$k == 0 ? 'active' : ''}">
-                <a href="{$item.link ? $item.link : 'javascript:;'}"><img src="{$item.image}" alt="{$item.title}"></a>
-            </div>
-            {/foreach}
-        </div>
-        <!-- 轮播（Carousel）导航 -->
-        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div> 
+	<!-- 面包屑导航 -->
+	<ul class="bread breadcrumb">
+	    <li><a href="#">资源中心</a></li>
+	    <li class="active"><a href="#">行业会展</a></li>
+	</ul>
+
 	<!-- 中间主要内容 -->
 	<div class=" main">
 		<h3 class="more_title">行业会展</h3>
