--- a/application/index/view/study/industry_knowledge.html
+++ b/application/index/view/study/industry_knowledge.html
@@ -15,36 +15,11 @@
 <body>
 	<!-- 顶部菜单 -->
 	{include file="common/header"}
-	<!-- 轮播图 -->
-	<div id="myCarousel" class="carousel slide">
-		<!-- 轮播（Carousel）指标 -->
-		<ol class="carousel-indicators">
-			<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-			<li data-target="#myCarousel" data-slide-to="1"></li>
-			<li data-target="#myCarousel" data-slide-to="2"></li>
-		</ol>   
-		<!-- 轮播（Carousel）项目 -->
-		<div class="carousel-inner">
-			<div class="item active">
-				<img src="/statics/images/img/img_lun.png" alt="First slide">
-			</div>
-			<div class="item">
-				<img src="/statics/images/img/img_lun.png" alt="Second slide">
-			</div>
-			<div class="item">
-				<img src="/statics/images/img/img_lun.png" alt="Third slide">
-			</div>
-		</div>
-		<!-- 轮播（Carousel）导航 -->
-		<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-			<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-			<span class="sr-only">Previous</span>
-		</a>
-		<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-			<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-			<span class="sr-only">Next</span>
-		</a>
-	</div> 
+	<!-- 面包屑导航 -->
+	<ul class="bread breadcrumb">
+	    <li><a href="#">学习中心</a></li>
+	    <li class="active"><a href="javascript:;">行业资讯</a></li>
+	</ul>
 	<!-- 中间主要内容 -->
 	<div class="main">
 		<h3 class="more_title">行业资讯</h3>
