--- a/application/index/view/study/video.html
+++ b/application/index/view/study/video.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<link rel="stylesheet" href="http://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="/statics/css/reset.css">
-	<link rel="stylesheet" type="text/css" href="/statics/css/common.css">
+	<link rel="stylesheet" type="text/css" href="/statics/css/common.css?v=1.0">
 	<link rel="stylesheet" type="text/css" href="/statics/css/study.css">
 	<script src="http://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
 	<script type="text/javascript" src="/statics/js/bootstrap.js"></script>
@@ -23,7 +23,7 @@
 	</ul>
 	<!-- 中间主要内容 -->
 	<div class="main">
-		<div class="study_img ac"><img src="/statics/images/img/img_1020_400.png"></div>
+		<!-- <div class="study_img ac"><img src="/statics/images/img/img_1020_400.png"></div> -->
 		<div class="study_title">
 			<div>
 				<span class="study_name">项目</span>
@@ -61,6 +61,7 @@
 		  //常规用法
 		laydate.render({
 		   	elem: '#time',
+		   	type: 'year',
 		   	done: function(value, date){
       			var category_id = $('select[name=category_id]').val();
       			var time = value;
