--- a/public/statics/css/common.css
+++ b/public/statics/css/common.css
@@ -91,9 +91,10 @@ header{
 
 /*面包屑导航*/
 .bread{
-	padding: 20px 23% 0 23%;
+	padding: 20px 0 0;
 	background-color: #fff;
-	margin-bottom: 0;
+	margin: 0 auto;
+	width: 900px;
 }
 
 /*h3标题*/
