--- a/application/index/view/study/ziliao.html
+++ b/application/index/view/study/ziliao.html
@@ -44,7 +44,7 @@
 			<li>
 				<a href="{:url('index/study/ziliaoDetail', array('id'=>$item.id))}"><img class="study_ul_img" src="{$item.thumbimage}" width="226" height="162"></a>
 				<a href="{:url('index/study/ziliaoDetail', array('id'=>$item.id))}"><img class="study_ul_start" src="/statics/images/icons/start.png"></a>
-				<p  class="study_ul_p"><a href="{:url('index/study/ziliaoDetail', array('id'=>$item.id))}">{:mb_substr($item.title, 0, 18)}</a></p>
+				<p  class="study_ul_p" title="{$item.title}"><a href="{:url('index/study/ziliaoDetail', array('id'=>$item.id))}">{:mb_substr($item.title, 0, 22)}</a></p>
 			</li>
 			{/foreach}
 		</ul>
