--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -94,7 +94,7 @@
                 <div class="index_position index_flex index_article">
                     <div class="index_l thumbImg"><img src="{$item.thumbimage}"></div>
                     <div class="index_r desc">
-                        <div><a class="index_content_title" href="{:url('index/project/detail', array('id'=>$item['id']))}">{$item.title}</a></div>
+                        <div><a class="index_content_title" href="{:url('index/study/knowledgedetail', array('id'=>$item['id']))}">{$item.title}</a></div>
                         <div class="index_content_div index_small">
                             {:mb_substr($item.description, 0, 20)}
                         </div>
