--- a/application/index/view/common/footer.html
+++ b/application/index/view/common/footer.html
@@ -1,9 +1,9 @@
 <footer>
-	<p>版权所有： **集团有限公司</p>
+	<p>版权所有： 沈阳星擎科技有限公司</p>
 	<p>
 		<img class="footer_img" src="/statics/images/icons/beianbgs.png">
-		<span>备案号　京ICP证00000000号</span>
-		<span>联系电话：010-84187577</span>
+		<span>备案号　鄂ICP备19019025号-1</span>
+		<span>联系电话：18771112399</span>
 	</p> 
 </footer>
 <script type="text/javascript" src="/statics/js/common.js"></script>
