--- a/application/index/view/study/ziliao_detail.html
+++ b/application/index/view/study/ziliao_detail.html
@@ -28,14 +28,14 @@
 				<div class="intor_big">{$info.title}</div>
 				<div class="intor_date">{:date('Y-m-d', $info.createtime)}</div>
 			</div>
-			{if condition="$buyed eq 0"}
+			<!-- {if condition="$buyed eq 0"}
 			<div><button class="common_btn">购买</button></div>
-			{/if}
+			{/if} -->
 		</div>
 		
-		{if condition="$buyed eq 1"}
+		<!-- {if condition="$buyed eq 1"}
 		<div class="intor_word detail_word"><video src="{$info.videofile}" controls></video></div>
-		{/if}
+		{/if} -->
 		<div class="intor_word detail_word">{$info.content}</div>
 
 		<!-- <h3 class="more_title">付款说明</h3>
