--- a/application/admin/view/study/ziliao/add.html
+++ b/application/admin/view/study/ziliao/add.html
@@ -32,7 +32,7 @@
             <ul class="row list-inline plupload-preview" id="p-thumbimage"></ul>
         </div>
     </div>
-    <div class="form-group">
+    <!-- <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Videofile')}:</label>
         <div class="col-xs-12 col-sm-8">
             <div class="input-group">
@@ -45,7 +45,7 @@
             </div>
             <ul class="row list-inline plupload-preview" id="p-videofile"></ul>
         </div>
-    </div>
+    </div> -->
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Content')}:</label>
         <div class="col-xs-12 col-sm-8">
