--- a/application/index/view/common/header.html
+++ b/application/index/view/common/header.html
@@ -8,7 +8,7 @@
                 <a href="javascript:;">项目与服务</a>
                 <ul class="header_ul_sel">
                     <!-- <li><a href="{:url('index/project/index')}">培训项目</a></li> -->
-                    <li><a href="{:url('index/project/page', array('id'=>2))}">专业培训</a></li>
+                    <li><a href="{:url('index/project/index')}">专业培训</a></li>
                     <li><a href="{:url('index/project/page', array('id'=>1))}">专业咨询</a></li>
                     <li><a href="{:url('index/project/page', array('id'=>3))}">国际商务</a></li>
                     <li><a href="{:url('index/project/page', array('id'=>4))}">参观学习</a></li>
