--- a/application/index/view/project/detail.html
+++ b/application/index/view/project/detail.html
@@ -28,7 +28,7 @@
 				<div class="intor_big">{$info.title}</div>
 				<div class="intor_date">{:date('Y-m-d', $info.createtime)}</div>
 			</div>
-			<div><button class="common_btn">活动报名</button></div>
+			<div><button class="common_btn">报名</button></div>
 		</div>
 
 		<div class="intor_word detail_word">
