--- a/application/index/view/study/ziliao.html
+++ b/application/index/view/study/ziliao.html
@@ -61,7 +61,7 @@
 		  //常规用法
 		laydate.render({
 		   	elem: '#time',
-		   	type： 'year',
+		   	type: 'year',
 		   	done: function(value, date){
       			var category_id = $('select[name=category_id]').val();
       			var time = value;
